nginx-exercice-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-unprivileged
  labels:
    app: nginx-unprivileged
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-unprivileged
  template:
    metadata:
      labels:
        app: nginx-unprivileged
    spec:
      containers:
        - name: nginx-unprivileged
          image: nginxinc/nginx-unprivileged@sha256:731f382bbad9a874f9f27db9c82d9e671e603e2210386a8e2b6da36cf336fa75
          ports:
            - containerPort: 8080
