nginx-exercice-3/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route-3
  namespace: exercice-nginx-3
spec:
  to:
    kind: Service
    name: nginx-unprivileged
  port:
    targetPort: 8080
